--- a/app/src/main/res/layout/grid_view_item.xml
+++ b/app/src/main/res/layout/grid_view_item.xml
@@ -16,6 +16,8 @@
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
         android:padding="2dp"
+        android:contentDescription="@null"
         app:imageUrl="@{photo.imgSrcUrl}"
-        tools:src="@tools:sample/backgrounds/scenic"/>
+        tools:src="@tools:sample/backgrounds/scenic"
+        />
 </layout>
